--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -732,3 +732,8 @@ src/Yamamoto/KartApeendix.cpp:
     .text: [0x80312154, 0x8031228c]
     .ctors: [0x80316648, 0x8031664c]
     .bss: [0x803ef4d0, 0x803ef500]
+
+# BUG: mwld aligns .ctors by 8 under certain conditions, ppcdis should take care of this normally but it doesn't use the trimmed length
+# use an empty .s as workaround to get the correct en offset
+src/ctorhack.s: 
+    .ctors: [0x8031665c, 0x80316660]
