--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -181,6 +181,9 @@ libs/JSystem/JSupport/JSUFileStream.cpp:
     .text: [0x80017e94, 0x800180b4]
     .data: [0x80348018, 0x80348040]
 
+libs/JSystem/JGadget/hashcode.cpp:
+    .text: [0x800180b4, 0x8001811c]
+
 libs/JSystem/JUtility/JUTAssert.cpp:
     .text: [0x800182a0, 0x800185a0]
     .bss: [0x8036df80, 0x8036e0c0]
