--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -649,10 +649,10 @@ src/Kaneshige/THP/THPPlayer.c:
     .sbss: [0x80416850, 0x80416868]
     .sdata2: [0x8041a690, 0x8041a6c0]
 
-#src/Kaneshige/THP/THPVideoDecode.c:
-    #.text: [0x801dbf80, 0x801dc4d4]
-    #.bss: [0x803cc2a8, 0x803cd618]
-    #.sbss: [0x80416868, 0x80416870]
+src/Kaneshige/THP/THPVideoDecode.c:
+    .text: [0x801dbf80, 0x801dc4d4]
+    .bss: [0x803cc2a8, 0x803cd618]
+    .sbss: [0x80416868, 0x80416870]
 
 src/Kaneshige/THP/THPRead.c:
     .text: [0x801dc4d4, 0x801dc7f0]
