--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -937,6 +937,9 @@ src/Kaneshige/TexLODControl.cpp:
     .sbss: [0x803d5658, 0x803d5660]
     .sdata2: [0x803d88e0, 0x803d88f8]
 
+src/Kaneshige/ShapePktControl.cpp:
+    .text: [0x80190134, 0x80190190]
+
 src/Kaneshige/JugemPoint.cpp:
     .text: [0x80190324, 0x80190334]
 
